component-library/components/sections/price-list/price-list.scss
.c-price-list {
    color: var(--brand-grey-000, #F9F9FB);
    display: grid;
    grid-template-columns: var(--twelve-column-grid);
    row-gap: 48px;
    align-items: left;
    text-align: left;

    &__heading, &__lists {
        grid-column: 2 / -2;
    }

    &__heading {
        display: flex;
        flex-direction: column;
        gap: 24px;
    }

    &--content-align-center {
        align-items: center;
        text-align: center;
    }

    &__lists {
        align-items: left;
        text-align: left;
        display: flex;
        flex-direction: column;
        gap: 32px;

        &__list {
            display: flex;
            flex-direction: column;
            gap: 32px;
            list-style-type: none;
            padding: 0;
            margin: 0;

            &__heading {
                font-weight: var(--font-weight-headings);
                line-height: var(--line-height);
                font-size: var(--small-heading);
                letter-spacing: var(--letter-spacing);
            }

            &__item {
                display: grid;
                grid-template-columns: auto 1fr auto;
                gap: 16px;
                font-weight: var(--font-weight-body);
                line-height: var(--line-height);
                font-size: var(--paragraph-large);
                letter-spacing: var(--letter-spacing);

                &__label {
                    overflow-wrap: anywhere;
                }

                &__seperator {
                    border-bottom: 1px var(--brand-grey-000, #F9F9FB) dotted
                }
            }
        }
    }

    @media screen and (min-width: 1279px) {
        &__heading, &__lists {
            grid-column: 4 / -4;
        }
    }
}

